# esp32c3-rust-movement-sensor

./: Cargo.toml  LICENSE-MIT  README.md
.cargo/: config.toml
src/: main.rs
