[package]
name = "rust-esp32-c3-sender"
version = "0.1.0"
authors = ["Kamil Grzymkowski <kamo.gabo@gmail.com>"]
edition = "2021"
license = "MIT"

[profile.release]
opt-level = 3

[profile.dev]
debug = true
opt-level = 3

[dependencies]
esp32c3-hal = {version="0.15"}

esp-backtrace = { version = "0.10.0", features = ["esp32c3", "panic-handler", "exception-handler", "print-uart"] }
esp-println = { version = "0.8.0", features = ["esp32c3", "log"] }

esp-wifi = { version="0.3.0", features = ["esp32c3", "esp-now"]}
